@@ -1,3 +1,9 @@
+2012-02-22  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* subconnector.cc (EventInputSubconnectorGlobal::receive)
+	(EventInputSubconnectorLocal::receive): Check that message
+	size > 0 before checking for FLUSH_MARK.
+
 2011-11-24  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Makefile.am (libmusic_la_LDFLAGS): Added libmpidep.la in order
